# OpenScout

./: CC-BY-SA_LICENCE  CHANGELOG.md  README.md  test.mkv
Demonstrations/: README.md
Documentation/CAD_Files/: README.md
Documentation/CAD_Files/DXF/: Acrylic Spacer.dxf  Floor_A3.dxf  (+4 more)
Hardware/: README.md
Hardware/01-robot-with-hinge/: motors_and_wheels.md
Hardware/robot_with_lazy_susan_bearing/: README.md  acrylic_panels.md  assembling_the_system.md  back_compartment.md  circuit_assembly_instructions.md  din_rail.md  front_compartment.md  hinge.md  motors_and_wheels.md  pid_calibration.md  upload_software.md
Software/: README.md  Twist_to_arduino  Twist_via_MQTT.ino  refined_pid.ino
Software/Controller/: README.md  simple_pid.ino
Software/simulation/openscout_ws/src/openscout/: CMakeLists.txt  package.xml
Software/simulation/openscout_ws/src/openscout/config/: gz_bridge.yaml
Software/simulation/openscout_ws/src/openscout/launch/: openscout.launch.py
Software/simulation/openscout_ws/src/openscout/model/: openscout.sdf
Software/simulation/openscout_ws/src/openscout/model/meshes/: BackLeftWheel.stl  FrontLeftWheel.stl  wedge.stl
doc/: README.md  basic_circuit.md
doc/01-robot-with-hinge/: README.md  acrylic_panels.md  back_compartment.md  din_rail.md  front_compartment.md  hinge.md  motors_and_wheels.md
temporary/Ahmed/: Moving OpenScout 2  MovingOpenScout 1  OpenScout.config  OpenScout.sdf  OpenScoutCAD.stl  OpenScout_FE.sdf  OpenScout_FE_one_chassis.sdf
temporary/Ahmed&Bart/: Simple Robot in World.sdf
temporary/openscout_ws/: commands.txt
(+12 files in other folders)
