<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openscout</name>
  <version>0.0.0</version>
  <description>The simulated version of the openscout robot.</description>
  <maintainer email="baartosz.kraawczyk@gmail.com">Bartosz</maintainer>
  <maintainer email="ahmadalberry@hotmail.com">Ahmed</maintainer>
  <license>Creative Commons Attribution-ShareAlike 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
